--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </header>
-    <nav>
+    <nav id="navbar">
         <div class="wrapper">
             <div class="mobile-menu">
                 <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
